--- a/static/css/action-dropdown.css
+++ b/static/css/action-dropdown.css
@@ -4,7 +4,7 @@
   background-image: none;
   border-color: #2e6da4;
   padding: 1px 5px 1px 10px;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -17,10 +17,10 @@
   border-color: #204d74;
 }
 
-.action-dropdown .btn-group .btn.disabled,
-.action-dropdown .btn-group .btn.disabled:hover,
-.action-dropdown .btn-group .btn:disabled,
-.action-dropdown .btn-group .btn:disabled:hover {
+.action-dropdown .btn.disabled,
+.action-dropdown .btn.disabled:hover,
+.action-dropdown .btn:disabled,
+.action-dropdown .btn:disabled:hover {
   background-color: #777;
   border-color: #6a6a6a;
   color: #333;
