--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
-html, body
-{
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+html,
+body {
+  font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -15,141 +15,129 @@ body {
 }
 
 strong {
-	font-weight: bold;
+  font-weight: bold;
 }
 
-em
-{
-	font-style: italic;
+em {
+  font-style: italic;
 }
 
-p
-{
-	margin: .25em 0 1.5em;
+p {
+  margin: 0.25em 0 1.5em;
 }
 
-abbr, .abbr {
-	border-bottom-style: dashed;
-	border-bottom-width: 1px;
-	border-bottom-color: blue;
-	cursor: help;
+abbr,
+.abbr {
+  border-bottom-style: dashed;
+  border-bottom-width: 1px;
+  border-bottom-color: blue;
+  cursor: help;
 }
 
-blockquote
-{
-	margin: .416em 0 .416em 1.1667em;
+blockquote {
+  margin: 0.416em 0 0.416em 1.1667em;
 }
 
-a
-{
-	color: #4c4c4c;
-	text-decoration: underline;
-	font-size: inherit;
-	font-weight: inherit;
+a {
+  color: #4c4c4c;
+  text-decoration: underline;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
-a:hover
-{
-	text-decoration: none;
-	color: #000000;
+a:hover {
+  text-decoration: none;
+  color: #000000;
 }
 
-ul, ol
-{
-	margin: .833em 0;
-	padding-left: 2em;
+ul,
+ol {
+  margin: 0.833em 0;
+  padding-left: 2em;
 }
-ul
-{
-	list-style-type: disc;
+ul {
+  list-style-type: disc;
 }
-ol
-{
-	list-style-type: decimal;
+ol {
+  list-style-type: decimal;
 }
-ul li, ol li
-{
+ul li,
+ol li {
 }
 
-dt
-{
-	margin: .416em 0 0 0;
+dt {
+  margin: 0.416em 0 0 0;
 }
 
-dd
-{
-	margin: .416em 0 .416em 1.1667em;
+dd {
+  margin: 0.416em 0 0.416em 1.1667em;
 }
 
-pre, code, tt
-{
-	font-family: "Andale Mono" , "Lucida Console" , "Courier New" , Courier, monospace;
-	margin: .833em 0;
+pre,
+code,
+tt {
+  font-family: "Andale Mono", "Lucida Console", "Courier New", Courier,
+    monospace;
+  margin: 0.833em 0;
 }
-sub
-{
-	vertical-align: sub;
-	font-size: smaller;
-	line-height:inherit;
+sub {
+  vertical-align: sub;
+  font-size: smaller;
+  line-height: inherit;
 }
 
-sup
-{
-	vertical-align: super;
-	font-size: smaller;
-	line-height:inherit;
+sup {
+  vertical-align: super;
+  font-size: smaller;
+  line-height: inherit;
 }
-img{
-	border:none;
+img {
+  border: none;
 }
 
 /* Page Specific
  ---------------------------------------------------------------------*/
 
-.breadCrumbHolder
-{
-	/*margin:0 0 20px 0;
+.breadCrumbHolder {
+  /*margin:0 0 20px 0;
 	margin:0 0 2px 0;*/
-
 }
-pre
-{
-	background:#ddd;
-	border:solid 1px #fff;
-	padding:10px;
-	color:#111;
+pre {
+  background: #ddd;
+  border: solid 1px #fff;
+  padding: 10px;
+  color: #111;
 }
-.description
-{
-	float:left;
-	width:700px;
-	margin-right:20px;
+.description {
+  float: left;
+  width: 700px;
+  margin-right: 20px;
 }
 
-.border{
-	border-bottom:1px solid #AAAAAA;
-    font-size:10px;
+.border {
+  border-bottom: 1px solid #aaaaaa;
+  font-size: 10px;
 }
 
-.spacetop{
-	margin-top:3px;
+.spacetop {
+  margin-top: 3px;
 }
-.brightyellow{
-	background-color:#ffbf00;
+.brightyellow {
+  background-color: #ffbf00;
 }
-.darkblue{
-	background-color:#19ade4;
+.darkblue {
+  background-color: #19ade4;
 }
-.paleblue{
-	background-color:#b8e9ff;
+.paleblue {
+  background-color: #b8e9ff;
 }
-.palered{
-	background-color:#cc5555;
+.palered {
+  background-color: #cc5555;
 }
 
 .buttonspacer {
-	margin-top:5px;
-	margin-bottom:20px;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .magni {
@@ -162,60 +150,59 @@ pre
 }
 
 .magbutton {
-    padding: 0;
-    width: 24px;
-    height: 24px;
+  padding: 0;
+  width: 24px;
+  height: 24px;
 }
 
 .magbutton.ui-button-text-only .ui-button-text {
   padding: 0;
 }
 
-.timeint{
-	float:right;
-	color:#222;
-	background-color:#bbbbbb;
-	position:relative;
-    border-radius: 4px;
-	/*margin-top:-31px;*/
-	padding-left:10px;
-    padding-bottom: 1px;
-	border:1px solid #848484;
-    font-size: 12px;
-    white-space: nowrap;
+.timeint {
+  float: right;
+  color: #222;
+  background-color: #bbbbbb;
+  position: relative;
+  border-radius: 4px;
+  /*margin-top:-31px;*/
+  padding-left: 10px;
+  padding-bottom: 1px;
+  border: 1px solid #848484;
+  font-size: 12px;
+  white-space: nowrap;
 }
 
 .notification_icon {
-    margin-left: 4px;
-    margin-top: 4px;
-    display: none;
+  margin-left: 4px;
+  margin-top: 4px;
+  display: none;
 }
 
 .submit {
-	padding-top:5px;
+  padding-top: 5px;
 }
 #msg {
-	color:#F00;
+  color: #f00;
 }
 #msg img {
-	margin-bottom:-3px;
+  margin-bottom: -3px;
 }
 #msg p {
-	margin:5px 0;
+  margin: 5px 0;
 }
 #msg p:last-child {
-	margin-bottom:0px;
+  margin-bottom: 0px;
 }
 
 tr.odd {
-	background-color: #f0f0f0;
-	text-align:center;
+  background-color: #f0f0f0;
+  text-align: center;
 }
 
 tr.even {
-	background-color: white;
-	text-align:center;
-
+  background-color: white;
+  text-align: center;
 }
 
 #conf_wrapper {
@@ -223,51 +210,51 @@ tr.even {
 }
 
 table.fs {
-	font-size:12px;
-    border-collapse: collapse;
+  font-size: 12px;
+  border-collapse: collapse;
 }
 
 table.fs td {
-	font-size:12px;
-    padding: 2px;
-    border: 1px solid #ddd;
+  font-size: 12px;
+  padding: 2px;
+  border: 1px solid #ddd;
 }
 
 table.fs th:first-child {
-    text-align: right;
+  text-align: right;
 }
 
-.txtleft{
-	text-align:left;
-	padding-left:10px;
-	font-weight:normal;
-    font-size: 12px;
+.txtleft {
+  text-align: left;
+  padding-left: 10px;
+  font-weight: normal;
+  font-size: 12px;
 }
-.txtright{
-	text-align:right;
-	padding-right:17px;
-	font-weight:normal;
-    font-size: 12px;
+.txtright {
+  text-align: right;
+  padding-right: 17px;
+  font-weight: normal;
+  font-size: 12px;
 }
-.txtcenter{
-    text-align:center;
-    font-weight:normal;
-    font-size: 12px;
+.txtcenter {
+  text-align: center;
+  font-weight: normal;
+  font-size: 12px;
 }
-.tblContent{
-    font-weight: normal;
-    font-size: 12px;
+.tblContent {
+  font-weight: normal;
+  font-size: 12px;
 }
 
-.polling_checkbox_margin{
-    margin-top: 6px;
+.polling_checkbox_margin {
+  margin-top: 6px;
 }
 
 h1.page-header {
   font-size: 24px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 500;
-  background-color: #0067B4;
+  background-color: #0067b4;
   padding: 15px 20px;
   margin: 0;
 }
@@ -276,7 +263,7 @@ h2.section_header {
   margin-top: 50px;
   margin-bottom: 15px;
   font-size: 12pt;
-  color: #0067B4;
+  color: #0067b4;
 }
 
 h1.page-header,
@@ -290,88 +277,89 @@ h2.section_header {
 }
 
 .vertical {
-    font-size: 8pt;
-    color: black;
-    text-shadow: #aaa 1px 1px 2px;
-    padding-left: 8px;
-    padding-bottom: 2px;
-    font-weight: normal;
+  font-size: 8pt;
+  color: black;
+  text-shadow: #aaa 1px 1px 2px;
+  padding-left: 8px;
+  padding-bottom: 2px;
+  font-weight: normal;
 
-    /* Safari */
-    -webkit-transform: rotate(90deg);
+  /* Safari */
+  -webkit-transform: rotate(90deg);
 
-    /* Firefox */
-    -moz-transform: rotate(90deg);
+  /* Firefox */
+  -moz-transform: rotate(90deg);
 
-    /* IE */
-    -ms-transform: rotate(90deg);
+  /* IE */
+  -ms-transform: rotate(90deg);
 
-    /* Opera */
-    -o-transform: rotate(90deg);
+  /* Opera */
+  -o-transform: rotate(90deg);
 
-    /* Internet Explorer */
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+  /* Internet Explorer */
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 
 .vertical:hover {
-    text-shadow: #FFFFCC 1px 1px 2px;
+  text-shadow: #ffffcc 1px 1px 2px;
 }
 
 .log_line {
-    font-family: courier;
-    font-size: 12px;
-    margin: 0;
-    padding-left: 3px;
-    text-align:left;
-    vertical-align: top;
+  font-family: courier;
+  font-size: 12px;
+  margin: 0;
+  padding-left: 3px;
+  text-align: left;
+  vertical-align: top;
 }
 
 tr.log_error {
-    color: #990000;
-    margin-right: 2px;
+  color: #990000;
+  margin-right: 2px;
 }
 
 tr.log_info {
-    border-right: 2px solid green;
+  border-right: 2px solid green;
 }
 
 .log_line a {
-    color: #111;
-    text-decoration: none;
-    font-weight: bold;
+  color: #111;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .log_line a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .no_notification {
-  background-color: #F0F0F0;
-  font-family:'Verdana, Arial, Helvetica, sans-serif';
-  font-size:12px;
+  background-color: #f0f0f0;
+  font-family: "Verdana, Arial, Helvetica, sans-serif";
+  font-size: 12px;
 }
 
-.notification_table{
-  display:none;
-  margin-left:5px;
-  height:300px;
-  overflow:auto;
+.notification_table {
+  display: none;
+  margin-left: 5px;
+  height: 300px;
+  overflow: auto;
 }
 
 div.toplevel {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 
-div.toplevel, div.relative {
-    position: relative;
-    background-color: white;
+div.toplevel,
+div.relative {
+  position: relative;
+  background-color: white;
 }
 
 .resource_alert {
   color: #ff0000;
 }
 
-.notification_job_buttons{
+.notification_job_buttons {
   width: 50px;
   height: 20px;
   font-size: 9px;
@@ -392,33 +380,32 @@ div.toplevel, div.relative {
   display: none;
 }
 
-.icon_column{
-  padding:2px;
+.icon_column {
+  padding: 2px;
   width: 20px;
   background-color: transparent;
 }
 
 table.validated_form th {
-    font-size: 10pt;
-    white-space: nowrap;
-    font-weight: normal;
-    text-align: left;
+  font-size: 10pt;
+  white-space: nowrap;
+  font-weight: normal;
+  text-align: left;
 }
 
 table.validated_form td {
-    font-size: 10pt;
+  font-size: 10pt;
 }
 
 .validated_form span.error {
-    color: red;
-    font-style: italic;
-    display: block;
+  color: red;
+  font-style: italic;
+  display: block;
 }
 
 .validated_form input.error {
-    border: 1px solid red;
+  border: 1px solid red;
 }
-
 
 div.command_job_list {
   font-size: 9pt;
@@ -463,53 +450,53 @@ div.job_summary ul {
 }
 
 div.step_header {
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 div.step_body {
-    padding-left: 12px;
+  padding-left: 12px;
 }
 
 span.step_number {
-    font-size: 14pt;
-    font-weight: bold;
-    text-shadow: #aaa 2px 2px 3px;
+  font-size: 14pt;
+  font-weight: bold;
+  text-shadow: #aaa 2px 2px 3px;
 }
 
 span.step_caption {
-    font-size: 12pt;
+  font-size: 12pt;
 }
 
 span.volume_chooser_selected {
-    margin-left: 6px;
+  margin-left: 6px;
 }
 
 span.volume_chooser_selected {
-    margin-left: 6px;
+  margin-left: 6px;
 }
 
 .volume_chooser_background {
-    border-radius: 3px;
-    margin-bottom: 6px;
+  border-radius: 3px;
+  margin-bottom: 6px;
 }
 
 .volume_chooser_background table {
-    width: 100%;
+  width: 100%;
 }
 
 .volume_chooser_background table .rowhighlight {
-    background-color: #09f !important;
+  background-color: #09f !important;
 }
 
 .volume_chooser_expander {
-    width: 100%;
-    max-height: 300px;
-    overflow-x: hidden;
-    overflow-y: auto;
+  width: 100%;
+  max-height: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #mdt_advanced {
-    display: none;
+  display: none;
 }
 
 #enable_dne_wrap {
@@ -517,52 +504,52 @@ span.volume_chooser_selected {
 }
 
 table.properties {
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
-    border-collapse: collapse;
-    margin-top: 12px;
-    width: 100%;
-    font-size: 10pt;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-collapse: collapse;
+  margin-top: 12px;
+  width: 100%;
+  font-size: 10pt;
 }
 
 table.properties tr {
-    border: 1px solid #c0c0c0;
+  border: 1px solid #c0c0c0;
 }
 
 table.properties tr.odd {
-    background: #ffffff;
+  background: #ffffff;
 }
 
 table.properties tr.even {
-    background: #f9f9f9;
+  background: #f9f9f9;
 }
 
 table.properties th {
-    font-weight: 550;
-    text-align: left;
-    padding-left: 3px;
-    border-right: 1px solid #c0c0c0;
-    white-space: nowrap;
+  font-weight: 550;
+  text-align: left;
+  padding-left: 3px;
+  border-right: 1px solid #c0c0c0;
+  white-space: nowrap;
 }
 
 table.properties td {
-    font-weight: normal;
-    text-align: left;
-    white-space: nowrap;
+  font-weight: normal;
+  text-align: left;
+  white-space: nowrap;
 }
 
 table.properties td ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 .job_row a.navigation {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .job_row a.navigation:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 footer {
@@ -585,17 +572,17 @@ footer .row .span12 {
 }
 
 .contextual_help_icon {
-	margin: 0.75em 0 0.75em 0.75em;
-	float: left;
+  margin: 0.75em 0 0.75em 0.75em;
+  float: left;
 }
 
 .contextual_help {
-	margin: auto;
-	margin-left: 2em;
+  margin: auto;
+  margin-left: 2em;
 }
 
 .contextual_help p {
-	margin: .75em 0.25em .75em .75em;
+  margin: 0.75em 0.25em 0.75em 0.75em;
 }
 
 a.help_hover {
@@ -604,7 +591,7 @@ a.help_hover {
 }
 
 div.dataTables_wrapper th {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 /*
@@ -625,28 +612,28 @@ div.DataTables_sort_wrapper span {
 }
 
 span.small_links {
-    font-size: 90%;
+  font-size: 90%;
 }
 
 span.small_links a {
-    color: blue;
+  color: blue;
 }
 
 p.host_selection_prompt {
-    margin-bottom: 3px;
+  margin-bottom: 3px;
 }
 
 div.host_selection_list {
-    max-height: 300px;
+  max-height: 300px;
 }
 
 ul.host_selection_list {
-    overflow-y: auto;
-    list-style-type: none;
+  overflow-y: auto;
+  list-style-type: none;
 }
 
 ul.alert_selection_list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 div.content {
@@ -654,22 +641,22 @@ div.content {
 }
 
 table.layout {
-    width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 div.help_loaded {
-    padding: 0 6px 6px 6px;
-    max-width: 400px;
+  padding: 0 6px 6px 6px;
+  max-width: 400px;
 }
 
 .technical_name {
-    font-family: Courier, monospace;
-    font-weight: bold;
+  font-family: Courier, monospace;
+  font-weight: bold;
 }
 
-.actions-cell div.dropdown {
+.actions-cell .action-dropdown {
   width: 100px;
 }
 
@@ -678,23 +665,23 @@ div.help_loaded {
 }
 
 li.nav div.dropdown ul.dropdown-menu {
-    background-color: #2C2C2C;
-    margin-top: 0;
+  background-color: #2c2c2c;
+  margin-top: 0;
 }
 
 li.nav div.dropdown ul.dropdown-menu li {
-    float: none;
-    font-size: 12px;
+  float: none;
+  font-size: 12px;
 }
 
 li.nav div.dropdown:hover > ul.dropdown-menu {
-    display: block;
+  display: block;
 }
 
 li.nav div.dropdown ul.dropdown-menu li a:hover {
-    background: #0067B4;
+  background: #0067b4;
 }
 
 .qtip p {
-    margin: 4px 0 4px 0;
+  margin: 4px 0 4px 0;
 }
