GH-1059 - Add the entry point for the seed app in the filesystem detail page
Add the stratagem-configuration wasm component to the filesystem detail
page.

Signed-off-by: Will Johnson <wjohnson@whamcloud.com>

--- a/templates/filesystem_detail.html
+++ b/templates/filesystem_detail.html
@@ -594,6 +594,8 @@
 
     <div style='clear:both;'></div>
 
+    <div id="stratagem-component"></div>
+
     <h2 class='section_header'>Management Target</h2>
     <table cellpadding="0" cellspacing="0" border="0" class="display" id="mgt_configuration_view" width="100%">
       <thead>
