- Initialize component in the actions callback like the action dropdown
Signed-off-by: Will Johnson <wjohnson@whamcloud.com>

--- a/templates/filesystem_detail.html
+++ b/templates/filesystem_detail.html
@@ -453,6 +453,10 @@
                 'right'
               );
 
+              // Setup stratagem
+              const { stratagem_component } = window.wasm_bindgen;
+              stratagem_component(document.getElementById("stratagem-component"));
+
               $(actionDropdown).after(LiveObject.busyIcon(filesystem));
 
               // Config param dialog
